Fix dropdown menus on mobile screen

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -10,8 +10,6 @@
     width: 100%;
     padding: 0 16px 0 12px;
 
-    position: relative;
-
     background-color: white;
     background-repeat: no-repeat;
     background-position: center right 17px;
